--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "@sherpa/configs": "^0.0.0",
     "eslint": "^8.48.0",
     "prettier": "^3.0.3",
-    "turbo": "^1.11.2",
+    "turbo": "^2.0.6",
     "typescript": "5.2.2"
   },
   "engines": {
     "node": ">=18"
-  }
+  },
+  "packageManager": "npm@10.5.0"
 }
