--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -3,10 +3,11 @@
   "include": [
     "next-env.d.ts",
     "**/*.ts",
-    "**/*.tsx"
+    "**/*.tsx",
+    ".next/types/**/*.ts"
   ],
   "exclude": [
     "node_modules",
     "cypress"
-  ],
+  ]
 }
