--- a/packages/data/tsconfig.eslint.json
+++ b/packages/data/tsconfig.eslint.json
@@ -2,8 +2,8 @@
   "extends": "@sherpa/configs/tsconfig.lib.json",
   "compilerOptions": {
 		"outDir": "dist",
-		"rootDirs": ["src", "scripts", "test"]
+		"rootDirs": ["types", "src", "scripts", "test"]
   },
-  "include": ["env.d.ts", "src/**/*.ts", "scripts/**/*.ts", "test/**/*.ts"],
+  "include": ["env.d.ts", "types/**/*.ts", "src/**/*.ts", "scripts/**/*.ts", "test/**/*.ts"],
   "exclude": ["node_modules", "dist"],
 }
