--- a/packages/data/package.json
+++ b/packages/data/package.json
@@ -17,7 +17,8 @@
   "scripts": {
     "prebuild": "shx rm -rf \"dist\"",
     "build": "tsx \"./scripts/build.ts\"",
-    "dev": "nodemon --watch types --watch src --ext ts,db --on-change-only --exec \"npm run build --ignore-scripts\"",
+    "temp": "tsx \"./scripts/temp.ts\"",
+    "dev": "nodemon --watch types --watch src --ext ts --on-change-only --exec \"npm run build --ignore-scripts\"",
     "lint": "eslint \"types\" \"src\" \"scripts\"",
     "test:paths": "vitest paths",
     "test:resources": "vitest resources",
