--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "lint": "next lint",
+		"check": "tsc --pretty --noEmit",
     "test": "cypress open",
     "test:ci": "cypress run"
   },
