--- a/packages/data/package.json
+++ b/packages/data/package.json
@@ -3,7 +3,7 @@
   "version": "0.4.0",
   "private": true,
   "type": "module",
-	"main": "./dist/index.js",
+  "main": "./dist/index.js",
   "exports": {
     "./*": "./dist/*"
   },
@@ -25,9 +25,12 @@
   "devDependencies": {
     "@seald-io/nedb": "^4.0.4",
     "@sherpa/configs": "*",
+    "@types/diff": "^5.2.1",
     "@types/he": "^1.2.3",
+    "chalk": "^5.3.0",
     "cheerio": "^1.0.0-rc.12",
     "crawlee": "^3.7.2",
+    "diff": "^5.2.0",
     "dotenv": "^16.4.1",
     "file-type": "^19.0.0",
     "he": "^1.2.0",
