--- a/packages/data/package.json
+++ b/packages/data/package.json
@@ -35,6 +35,8 @@
     "file-type": "^19.0.0",
     "he": "^1.2.0",
     "html-format": "^1.1.6",
+    "metascraper": "^5.45.22",
+    "metascraper-title": "^5.45.22",
     "nodemon": "^3.0.3",
     "npm-run-all2": "^6.1.1",
     "open": "^10.1.0",
