Feat/Resources update scripts (#99)
* Topics data store referencing resources by id

* Tests update

* Dependencies remove

* Get methods remove

* Store classes cleanup

* Healthcheck titles updates

* Health check strategy schemas

* HealthCheckStrategies store wip

* HealthCheckStrategies store

* CrawlerStrategy model

* CrawlerStrategy resource to resourceId

* Healthcheck strategy to resources store

* Healthcheck runner to src

* Healthcheck in update scripts

* Cli utils

* Resources urls update

* Common Db base class

* Delete resource script wip

* Logging utils refactor

* Tweaks

* Delete resource wip

* Delete resource wip

* Delete resource wip

* Delete resource wip

* Delete resource

* Log scripts utilities tweaks

* Dead resources removal

* Resources search script

* Scripts utils tweaks

* Resources update main loop search

* HttpHealthCheck runner metadata get update

* Completion store rerendering fix

* HealthCheck strategies values map

* Healthcheck update scripts wip

* Healthcheck update scripts tweaks

* Scripts clone utility

* Resources healthcheck strategy update

* Resources healthcheck strategy update

--- a/packages/data/package.json
+++ b/packages/data/package.json
@@ -3,7 +3,7 @@
   "version": "0.4.0",
   "private": true,
   "type": "module",
-	"main": "./dist/index.js",
+  "main": "./dist/index.js",
   "exports": {
     "./*": "./dist/*"
   },
@@ -25,15 +25,18 @@
   "devDependencies": {
     "@seald-io/nedb": "^4.0.4",
     "@sherpa/configs": "*",
+    "@types/diff": "^5.2.1",
     "@types/he": "^1.2.3",
-    "ajv": "^8.11.0",
-    "ajv-errors": "^3.0.0",
+    "chalk": "^5.3.0",
     "cheerio": "^1.0.0-rc.12",
     "crawlee": "^3.7.2",
+    "diff": "^5.2.0",
     "dotenv": "^16.4.1",
     "file-type": "^19.0.0",
     "he": "^1.2.0",
     "html-format": "^1.1.6",
+    "metascraper": "^5.45.22",
+    "metascraper-title": "^5.45.22",
     "nodemon": "^3.0.3",
     "npm-run-all2": "^6.1.1",
     "open": "^10.1.0",
