--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "eslint": "^8.48.0",
     "prettier": "^3.0.3",
     "turbo": "^2.0.6",
-    "typescript": "5.2.2"
+    "typescript": "^5.5.4"
   },
   "engines": {
     "node": ">=18"
