--- a/packages/data/tsconfig.eslint.json
+++ b/packages/data/tsconfig.eslint.json
@@ -2,8 +2,7 @@
   "extends": "@sherpa/configs/tsconfig.lib.json",
   "compilerOptions": {
 		"outDir": "dist",
-		"rootDirs": ["types", "src", "scripts", "test"]
   },
   "include": ["env.d.ts", "types/**/*.ts", "src/**/*.ts", "scripts/**/*.ts", "test/**/*.ts"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["../../node_modules", "node_modules", "dist"]
 }
