--- a/packages/data/tsconfig.eslint.json
+++ b/packages/data/tsconfig.eslint.json
@@ -1,7 +1,7 @@
 {
   "extends": "@sherpa/configs/tsconfig.lib.json",
   "compilerOptions": {
-		"outDir": "dist",
+		"outDir": "dist"
   },
   "include": ["env.d.ts", "types/**/*.ts", "src/**/*.ts", "scripts/**/*.ts", "test/**/*.ts"],
   "exclude": ["../../node_modules", "node_modules", "dist"]
