Code quality scripts wireup

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "check:lint": "next lint",
 		"check:types": "tsc --pretty --noEmit",
-    "test": "cypress open",
+    "test:local": "cypress open",
     "test:ci": "cypress run"
   },
   "dependencies": {
