--- a/turbo.json
+++ b/turbo.json
@@ -1,37 +1,28 @@
 {
   "$schema": "https://turbo.build/schema.json",
-  "globalDependencies": [
-    "**/.env.*local"
-  ],
+  "globalDependencies": ["**/.env.*local"],
   "tasks": {
     "build": {
-      "dependsOn": [
-        "^build"
-      ],
-      "outputs": [
-        "dist/**",
-        ".next/**",
-        "!.next/cache/**"
-      ]
+      "dependsOn": ["^build"],
+      "outputs": ["dist/**", ".next/**", "!.next/cache/**"]
     },
     "@sherpa/build": {
-      "env": [
-        "NEXT_PUBLIC_GITHUB_URL"
-      ]
+      "env": ["NEXT_PUBLIC_GITHUB_URL"]
     },
     "dev": {
       "cache": false,
       "persistent": true,
-      "dependsOn": [
-        "^build"
-      ]
+      "dependsOn": ["^build"]
     },
-    "lint": {},
+    "check:lint": {
+      "cache": false
+    },
+    "check:types": {
+      "cache": false
+    },
     "test": {
       "cache": false,
-      "dependsOn": [
-        "^build"
-      ]
+      "dependsOn": ["^build"]
     }
   }
 }
