--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build": "turbo run build",
     "build:packages": "turbo run build --filter='./packages/*'",
     "build:apps": "turbo run build --filter='./apps/*'",
-    "lint": "turbo run lint",
+    "check:lint": "turbo run check:lint",
+    "check:types": "turbo run check:types",
     "test": "turbo run test",
     "format": "prettier --write \"**/*.{ts,tsx,md,json}\""
   },
