--- a/turbo.json
+++ b/turbo.json
@@ -10,19 +10,21 @@
       "env": ["NEXT_PUBLIC_GITHUB_URL"]
     },
     "dev": {
+      "dependsOn": ["^build"],
       "cache": false,
-      "persistent": true,
-      "dependsOn": ["^build"]
+      "persistent": true
     },
     "check:lint": {
+      "dependsOn": ["^build"],
       "cache": false
     },
     "check:types": {
+      "dependsOn": ["^build"],
       "cache": false
     },
     "test": {
-      "cache": false,
-      "dependsOn": ["^build"]
+      "dependsOn": ["^build"],
+      "cache": false
     }
   }
 }
