Chore/Code quality improvements (#100)
* Db stores as singletons

* Update script tweaks

* Script utilities split

* Scripts command utilities

* Scripts command utilities

* Update scripts tweaks

* Update scripts tweaks

* Update scripts to start

* Start script logging improvements

* Lint fixes

* Healthcheck runners importing from common

* Typescript version update

* Crawlee version update

* Type errors fixes and temp workarounds

* Tsconfig fix

* Healthcheck workflow fix

* Lint fixes

* Code quality scripts wireup

* Code quality checks in preview workflow

* Preview workflow update

* Turbo config tweaks

* Cypress version update

* Self review fixes

--- a/turbo.json
+++ b/turbo.json
@@ -1,37 +1,30 @@
 {
   "$schema": "https://turbo.build/schema.json",
-  "globalDependencies": [
-    "**/.env.*local"
-  ],
+  "globalDependencies": ["**/.env.*local"],
   "tasks": {
     "build": {
-      "dependsOn": [
-        "^build"
-      ],
-      "outputs": [
-        "dist/**",
-        ".next/**",
-        "!.next/cache/**"
-      ]
+      "dependsOn": ["^build"],
+      "outputs": ["dist/**", ".next/**", "!.next/cache/**"]
     },
     "@sherpa/build": {
-      "env": [
-        "NEXT_PUBLIC_GITHUB_URL"
-      ]
+      "env": ["NEXT_PUBLIC_GITHUB_URL"]
     },
     "dev": {
+      "dependsOn": ["^build"],
       "cache": false,
-      "persistent": true,
-      "dependsOn": [
-        "^build"
-      ]
+      "persistent": true
     },
-    "lint": {},
+    "check:lint": {
+      "dependsOn": ["^build"],
+      "cache": false
+    },
+    "check:types": {
+      "dependsOn": ["^build"],
+      "cache": false
+    },
     "test": {
-      "cache": false,
-      "dependsOn": [
-        "^build"
-      ]
+      "dependsOn": ["^build"],
+      "cache": false
     }
   }
 }
