--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -5,9 +5,9 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "lint": "next lint",
-		"check": "tsc --pretty --noEmit",
-    "test": "cypress open",
+    "check:lint": "next lint",
+    "check:types": "tsc --pretty --noEmit",
+    "test:local": "cypress open",
     "test:ci": "cypress run"
   },
   "dependencies": {
@@ -27,7 +27,7 @@
   "devDependencies": {
     "@sherpa/configs": "*",
     "@testing-library/cypress": "^10.0.1",
-    "cypress": "13.2.0",
+    "cypress": "^13.13.3",
     "cypress-axe": "^1.5.0",
     "cypress-recurse": "^1.35.2"
   }
