--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build": "turbo run build",
     "build:packages": "turbo run build --filter='./packages/*'",
     "build:apps": "turbo run build --filter='./apps/*'",
-    "lint": "turbo run lint",
+    "check:lint": "turbo run check:lint",
+    "check:types": "turbo run check:types",
     "test": "turbo run test",
     "format": "prettier --write \"**/*.{ts,tsx,md,json}\""
   },
@@ -20,7 +21,7 @@
     "eslint": "^8.48.0",
     "prettier": "^3.0.3",
     "turbo": "^2.0.6",
-    "typescript": "5.2.2"
+    "typescript": "^5.5.4"
   },
   "engines": {
     "node": ">=18"
