--- a/packages/data/tsconfig.eslint.json
+++ b/packages/data/tsconfig.eslint.json
@@ -1,9 +1,8 @@
 {
   "extends": "@sherpa/configs/tsconfig.lib.json",
   "compilerOptions": {
-		"outDir": "dist",
-		"rootDirs": ["types", "src", "scripts", "test"]
+		"outDir": "dist"
   },
   "include": ["env.d.ts", "types/**/*.ts", "src/**/*.ts", "scripts/**/*.ts", "test/**/*.ts"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["../../node_modules", "node_modules", "dist"]
 }
