--- a/packages/data/tsconfig.json
+++ b/packages/data/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "extends": "@sherpa/configs/tsconfig.lib.json",
   "compilerOptions": {
-		"rootDir": "types",
-		"outDir": "dist"
+		"outDir": "dist",
+		"noEmit": true
   },
-  "include": ["types/**/*.ts"],
-  "exclude": ["node_modules", "dist"]
+  "include": ["env.d.ts", "types/**/*.ts", "src/**/*.ts", "scripts/**/*.ts", "test/**/*.ts"],
+  "exclude": ["../../node_modules", "node_modules", "dist"]
 }
