--- a/packages/data/package.json
+++ b/packages/data/package.json
@@ -15,7 +15,7 @@
     }
   },
   "scripts": {
-    "start": "tsx \"scripts/start.ts\"",
+    "start": "tsx \"scripts/start\"",
     "prebuild": "shx rm -rf \"dist\"",
     "build": "tsx \"./scripts/build.ts\"",
     "check:lint": "eslint \"types\" \"src\" \"scripts\"",
