--- a/packages/data/package.json
+++ b/packages/data/package.json
@@ -24,6 +24,7 @@
     "test:resources": "vitest resources"
   },
   "devDependencies": {
+    "@metascraper/helpers": "^5.46.5",
     "@seald-io/nedb": "^4.0.4",
     "@sherpa/configs": "*",
     "@types/diff": "^5.2.1",
@@ -37,7 +38,6 @@
     "he": "^1.2.0",
     "html-format": "^1.1.6",
     "metascraper": "^5.45.22",
-    "metascraper-title": "^5.45.22",
     "nodemon": "^3.0.3",
     "npm-run-all2": "^6.1.1",
     "open": "^10.1.0",
