--- a/packages/data/tsconfig.json
+++ b/packages/data/tsconfig.json
@@ -2,7 +2,8 @@
   "extends": "@sherpa/configs/tsconfig.lib.json",
   "compilerOptions": {
 		"outDir": "dist",
-		"noEmit": true
+		"noEmit": true,
+		"allowJs": true
   },
   "include": ["env.d.ts", "types/**/*.ts", "src/**/*.ts", "scripts/**/*.ts", "test/**/*.ts"],
   "exclude": ["../../node_modules", "node_modules", "dist"]
