--- a/packages/data/tsconfig.json
+++ b/packages/data/tsconfig.json
@@ -5,6 +5,6 @@
 		"noEmit": true,
 		"allowJs": true
   },
-  "include": ["env.d.ts", "types/**/*.ts", "src/**/*.ts", "scripts/**/*.ts", "test/**/*.ts"],
+  "include": ["env.d.ts", "vitest.d.ts", "types/**/*.ts", "src/**/*.ts", "scripts/**/*.ts", "test/**/*.ts"],
   "exclude": ["../../node_modules", "node_modules", "dist"]
 }
