--- a/packages/data/package.json
+++ b/packages/data/package.json
@@ -15,6 +15,7 @@
     }
   },
   "scripts": {
+		"test": "tsx scripts/test",
     "manage": "tsx \"scripts/manage\" --",
     "update": "tsx \"scripts/update\"",
     "prebuild": "shx rm -rf \"dist\"",
@@ -36,6 +37,7 @@
     "crawlee": "^3.11.1",
     "diff": "^5.2.0",
     "dotenv": "^16.4.1",
+    "enquirer": "^2.4.1",
     "file-type": "^19.0.0",
     "he": "^1.2.0",
     "html-format": "^1.1.6",
