--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "check:types": "turbo run check:types",
     "test": "turbo run test",
     "format": "prettier --write \"**/*.{ts,tsx,md,json}\"",
-    "data:update": "npm run update --workspace=@sherpa/data"
+    "data:manage": "npm run manage --workspace=@sherpa/data --"
   },
   "devDependencies": {
     "@sherpa/configs": "^0.0.0",
