--- a/packages/data/package.json
+++ b/packages/data/package.json
@@ -15,7 +15,7 @@
     }
   },
   "scripts": {
-    "update": "tsx \"scripts/update\"",
+    "manage": "tsx \"scripts/manage\" --",
     "prebuild": "shx rm -rf \"dist\"",
     "build": "tsx \"./scripts/build.ts\"",
     "check:lint": "eslint \"types\" \"src\" \"scripts\"",
@@ -31,9 +31,11 @@
     "@types/he": "^1.2.3",
     "chalk": "^5.3.0",
     "cheerio": "^1.0.0-rc.12",
+    "commander": "^14.0.0",
     "crawlee": "^3.11.1",
     "diff": "^5.2.0",
     "dotenv": "^16.4.1",
+    "enquirer": "^2.4.1",
     "file-type": "^19.0.0",
     "he": "^1.2.0",
     "html-format": "^1.1.6",
